2012-05-11 Julio A. Freyre-Gonzalez <jfreyreg@gmail.com>
	* Update Spanish messages and manual.

2012-05-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0
	* man/*/man1/*.pod: Removed =encoding. It is not supported
	  by perl 5.8.8, which is shipped with MinGW and DJGPP.

2012-04-20 Erwin Waterlander <waterlan@xs4all.nl>
	* man/*/man1/*.pod: Set encoding explicitly to Latin-1.
	* Makefile: Target 'doc' makes all man pages.

2012-04-12 Erwin Waterlander <waterlan@xs4all.nl>
	* po/de.po: Update German translations. Thanks to Philipp Thomas.

2012-04-09 Erwin Waterlander <waterlan@xs4all.nl>
	* INSTALL.txt: List the prerequisites.
	* Makefile: Friendlier for DJGPP/MinGW/MSYS.

2012-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* po/eo.po: Update Esperanto translations. Thanks to Rugxulo.

2012-03-30 Erwin Waterlander <waterlan@xs4all.nl>
	* Skip UTF-16 file when conversion to UTF-8 goes wrong.
	* Update English and Dutch manual.

2012-03-28 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Support UTF-16 surrogate pairs.
	* dos2unix.c, unix2dos.c: Check wchar_t size.

2012-03-26 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Use fgetc/fputc instead of getc/putc.

2012-03-25 Erwin Waterlander <waterlan@xs4all.nl>
	* po, man: Update Dutch translations.

2012-03-24 Erwin Waterlander <waterlan@xs4all.nl>
	* On Unix, convert UTF-16 files only when the locale encoding
	  is UTF-8 to prevent accidental loss of text.

2012-03-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Turn off ISO and 7-bit mode if an Unicode text file is detected,
	  to prevent corruption of UTF-8 files.
	* Update English manual.
	* Fix compilation for WatcomC, DJGPP, MSYS, OS/2.
	* Makefile: Support CFLAGS_USER, LDFLAGS_USER, and DEFS_USER for
	  Debian Linux. Thanks to Jari Aalto.

2012-03-21 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 from stdin.
	* Update English manual.

2012-03-20 Erwin Waterlander <waterlan@xs4all.nl>